--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^5.1.0",
+    "normalize.css": "^8.0.1",
+    "vue": "^2.6.10",
+    "vue-simple-markdown": "^1.1.1",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -43,6 +49,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie < 11"
   ]
 }
