--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown-loader": "^5.1.0",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
+    "vue-scrollto": "^2.17.1",
     "vue-simple-markdown": "^1.1.1",
     "vue2-google-maps": "^0.10.7"
   },
